--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,31 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.semaforo{
+    background: black;
+    padding: 10px;
+    
+}
+.light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.green{
+    background: green;
+}
+.red{
+    background: red;
+}
+.yellow{
+    background: yellow;
+}
+.shineRed{
+    box-shadow: 0px 0px 15px 10px red;
+}
+.shineYellow{
+    box-shadow: 0px 0px 15px 10px yellow;
+}
+.shineGreen{
+    box-shadow: 0px 0px 15px 10px green;
+}
